--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -13,6 +13,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="25dp"
+            android:background ="#DDED553B"
             android:gravity="center"
             android:padding="25dp"
             android:text="@string/textview"
